@@ -206,7 +206,7 @@ IMPORTANT! THIS IS A TEMPORARY DATA PREVIEW AND IS NOT A PERMANENT RECORD. YOUR 
 IATI 出版社
 
 #stats_missing_text 
-其他项目：
+其他项目 
 
 #stats_active_table_text
 活跃项目
