@@ -209,7 +209,7 @@ Planned Activities
 IATI Reporting Organisations
 
 #stats_missing_text
-Other Activities:
+Other Activities
 
 #stats_active_table_text
 Active<br/>Activities
