@@ -206,7 +206,7 @@ Projets Prévus
 IATI éditeurs
 
 #stats_missing_text 
-D'autres projets:
+D'autres projets 
 
 #stats_active_table_text 
 Projets<br/>Actifs 
