@@ -206,7 +206,7 @@ IMPORTANT! THIS IS A TEMPORARY DATA PREVIEW AND IS NOT A PERMANENT RECORD. YOUR 
 IATI प्रकाशक
 
 #stats_missing_text 
-अन्य परियोजनाएँ:
+अन्य परियोजनाएँ 
 
 #stats_active_table_text
 सक्रिय परियोजनाओं
