@@ -206,7 +206,7 @@ IMPORTANT! THIS IS A TEMPORARY DATA PREVIEW AND IS NOT A PERMANENT RECORD. YOUR 
 IATIパブリッシャ
 
 #stats_missing_text 
-その他のプロジェクト：
+その他のプロジェクト 
 
 #stats_active_table_text
 アクティブなプロジェクト
