@@ -206,7 +206,7 @@ Proyectos Planificados
 IATI Editores 
 
 #stats_missing_text 
-Otros proyectos:
+Otros proyectos 
 
 #stats_active_table_text 
 Proyectos<br/>Activos 
