@@ -12,6 +12,7 @@
 {main_head}
 {main_max}
 {about_data_links}
+<!--{new_main_stats}-->
 {main_stats}
 {donor_graph}
 {countries_graph}
@@ -127,6 +128,79 @@
 				<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=planned" class="stats_link planned">
 					<span class="stats_title">{stats_planned_text}</span>
 					<span class="stats_num small">{planned_projects}</span>
+				</a>
+			</td>
+			<td title="{stats_publisher_tip_text}">
+				<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=list_publishers" class="stats_link publishers">
+					<span class="stats_title tiny">{stats_publisher_text}</span>
+					<span class="stats_num small">{numof_publishers}</span>
+				</a>
+			</td>
+		</tr>
+	</table>
+	<div class="default mention">{main_mention}{main_declare_stats}</div>
+</div>
+
+#new_main_stats
+<div class="stats_wrap">
+	<table class="title key">
+		<tr>
+			<td class="icon"><img src="{flava}publisher_icon.png" alt="{active_icon_alt_text}" width="40" height="40"/></td>
+			<td>{stats_title_text}</td>
+		</tr>
+	</table>
+	<table class="stats">
+		<tr>
+			<td title="{stats_active_tip_text}">
+				<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=active" class="stats_link">
+					<span class="stats_title">Pipeline/identification</span>
+					<span class="stats_num small">{active_projects}</span>
+				</a>
+			</td>
+			<td title="{stats_ended_tip_text}">
+				<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=ended" class="stats_link">
+					<span class="stats_title">Implementation</span>
+					<span class="stats_num small">{ended_projects}</span>
+				</a>
+			</td>
+			<td title="{stats_total_tip_text}">
+				<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=list_activities" class="stats_link total">
+					<span class="stats_title">Finalisation</span>
+					<span class="stats_num small">{planned_projects}</span>
+				</a>
+			</td>
+		</tr>
+		<tr>
+			<td title="{stats_active_tip_text}">
+				<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=active" class="stats_link">
+					<span class="stats_title">Closed</span>
+					<span class="stats_num small">{planned_projects}</span>
+				</a>
+			</td>
+			<td title="{stats_ended_tip_text}">
+				<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=ended" class="stats_link">
+					<span class="stats_title">Cancelled</span>
+					<span class="stats_num small">{planned_projects}</span>
+				</a>
+			</td>
+			<td title="{stats_total_tip_text}">
+				<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=list_activities" class="stats_link total">
+					<span class="stats_title">Suspended</span>
+					<span class="stats_num small">{planned_projects}</span>
+				</a>
+			</td>
+		</tr>
+		<tr>
+			<td title="{stats_active_tip_text}">
+				<a onclick="switch($(this).children('span').first().html()){ case '0': return false; };" href="#view=missing" class="stats_link">
+					<span class="stats_title">{stats_missing_text}</span>
+					<span class="stats_num small">{missing_projects}</span>
+				</a>
+			</td>
+			<td title="{stats_total_tip_text}">
+				<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=list_activities" class="stats_link total">
+					<span class="stats_title">{stats_total_text}</span>
+					<span class="stats_num small">{total_projects_human}</span>
 				</a>
 			</td>
 			<td title="{stats_publisher_tip_text}">
