@@ -1,3 +1,9 @@
+Development Portal (2024-05-10 shi)
+==============================
+Minor css fixes
+New stats section for activity status
+
+
 Development Portal (2024-04-16 shi)
 ==============================
 Update css for new graph bars
